Version 2.02.67 -
===============================
  Avoid selecting names under /dev/block if there is an alternative.
  Update clustered log kernel module name to log-userspace for 2.6.31 onwards.
  Activate only first head of Replicator for vgchange -ay.
  Add Replicators' LVs to dtree for activation.
  Avoid print activation message if there is a missing VG (Replicator).
  Fixed scripts/relpath.awk to work in mawk
  Add _add_partial_replicator_to_dtree().
  Activation code read and releases also remote VGs (Replicator).
  Check for missing VGs before taking lock_vol (Replicator).
  Update process_each_lv_in_vg() to use cmd_vg structure.
  Update _process_one_vg() to work with cmd_vg structure.
  Add functions for read and release VGs list.
  Add find_replicator_vgs() to discover all needed VGs for replicator-dev LV.
  Add functions for handling cmd_vg structure.
  Extend _lv_each_dependency() with Replicator dependencies.
  Add check_replicator_segment() for catching internal Replicator errors.
  Initial lvm2 support for Replicator metadata handling.
  Checking open_count in all parents of presuspend_node.
  Added dm_tree_node_set_presuspend_node() to presuspend child in deactivate.
  Initial libdm support for Replicator target (API is not stable yet).
  Extend process_each_lv_in_vg() with support for list of failed lvnames.
  Return ECMD_FAILED for break in process_each_lv() and process_each_segment_in_lv().

Version 2.02.66 - 20th May 2010
===============================
  If unable to obtain snapshot percentage leave value blank on reports.
  Add install_system_dirs and install_initscripts makefile targets.
  Add configure options for system and locking directories.
  Generate example.conf so default lvm.conf contents can be configured.
  Install lvmconf script by default.
  Remove unnecessary versioned dmeventd plugin symlinks.
  Add tests for lvm_vgname_from_{pvid|device}.
  Add lvm2app interfaces to lookup a vgname from a pvid and pvname.